third_party/move/move-compiler-v2/tests/checking-lang-v2.5/public_const_in_script.move
// Tests that public/package const is rejected in scripts (parser error).

script {
    public const X: u64 = 42;

    fun main() {}
}
